PA4/PA3/TestCasesMeggy/t2
PA4error2.java:6: error: incompatible types: int cannot be converted to Color
	   new C().setP(2,(byte)7,Meggy.Color.BLUE);
	                ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
